# fakt

./: .gitignore  .vimspector.json  Cargo.toml
fakt/: Cargo.toml
fakt-client/: Cargo.toml
fakt-core/: Cargo.toml  README.md
fakt-core/src/: fakt.lalrpop  lib.rs
fakt-core/src/collections/: .interner.rs.swp  interner.rs  mod.rs
fakt-core/src/compiler/: ast.rs  lexer.rs  old_parser.rs  parser.rs
fakt-core/src/eval/: mod.rs
fakt-core/src/eval/naive/: mod.rs
fakt-core/src/lang/: ast.rs  asyncstr.rs  charstream.rs  lexer.rs  mod.rs  parser.rs
fakt-core/src/util/: charstream.rs  mod.rs  readchars.rs
fakt-server/: Cargo.toml
