[package]
name = "fakt-client"
description = "Reference RPC client for fakt"
version = "0.1.0"
authors = ["Scott LaVigne <lavignes@amazon.com>"]
edition = "2021"
documentation = "https://github.com/lavignes/fakt"
homepage = "https://github.com/lavignes/fakt"
repository = "https://github.com/lavignes/fakt"
license = "Apache-2.0"

[dependencies]
