[package]
name = "fakt-core"
description = "Core library and utilities for the fakt rules engine"
version = "0.1.0"
authors = ["Scott LaVigne <lavignes@amazon.com>"]
edition = "2018"
documentation = "https://github.com/lavignes/fakt"
homepage = "https://github.com/lavignes/fakt"
repository = "https://github.com/lavignes/fakt"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
futures = "0.3"
async-recursion = "0.3"
fxhash = "0.2"
