[package]
name = "fakt-core"
description = "Core library and utilities for the fakt rules engine"
version = "0.1.0"
authors = ["Scott LaVigne <lavignes@amazon.com>"]
edition = "2021"
documentation = "https://github.com/lavignes/fakt"
homepage = "https://github.com/lavignes/fakt"
repository = "https://github.com/lavignes/fakt"
license = "Apache-2.0"

[dependencies]
"thiserror" = "1.0"
log = "0.4"
futures = "0.3"
async-recursion = "0.3"
fxhash = "0.2"
